tests/NormalTests/paczka1/fuzzy1/75798487.err
Error in line 8: 7tf A0 27,9
Error in line 14: 7tf A0 133,4
Error in line 20: A307 A0 2,7
Error in line 3: 7tf A758 28,0
Error in line 23: A307 A0 11,8
Error in line 25: ?A0
Error in line 28: NiOAu A0 28,4
Error in line 22: 7tf A307 95,8
Error in line 30: NiOAu A0 114,2
Error in line 18: A307 A307 29,4
